--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-"first post" 
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Website</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1>Welcome to My Website</h1>
+    </div>
+  </body>
+</html>
